manifiesto/objects/Terminal_CeBe_Estanque__c.object
<CustomObject>
    <description>Muestra la relación entre terminal, centro de beneficio y estanque que existe para un servicio.
Se vincula con Oportunidad y/o contrato de Terminales Marítimos</description>
    <fields>
        <fullName>Centro_de_Beneficio__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Centro de Beneficio</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>$Source.Terminal__c</field>
                <operation>equals</operation>
                <valueField>Centro_de_Beneficio__c.Terminal__r.Name</valueField>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Centro_de_Beneficio__c</referenceTo>
        <relationshipLabel>Terminal, Centro de Beneficio y Estanque</relationshipLabel>
        <relationshipName>Terminal_Centro_de_Beneficio_y_Estanque</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Contrato__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Contrato</label>
        <referenceTo>Contract</referenceTo>
        <relationshipLabel>Terminal, Centro de Beneficio y Estanque</relationshipLabel>
        <relationshipName>Terminal_Centro_de_Beneficio_y_Estanque</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Estanque__c</fullName>
        <label>Estanque</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Terminal__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Mejillones 101</fullName>
                </value>
                <value>
                    <fullName>Mejillones 102</fullName>
                </value>
                <value>
                    <fullName>Mejillones 103</fullName>
                </value>
                <value>
                    <fullName>Mejillones 104</fullName>
                </value>
                <value>
                    <fullName>Mejillones 107</fullName>
                </value>
                <value>
                    <fullName>Mejillones 108</fullName>
                </value>
                <value>
                    <fullName>Mejillones 109</fullName>
                </value>
                <value>
                    <fullName>Mejillones 401</fullName>
                </value>
                <value>
                    <fullName>Quintero 101</fullName>
                </value>
                <value>
                    <fullName>Quintero 102</fullName>
                </value>
                <value>
                    <fullName>Quintero 103</fullName>
                </value>
                <value>
                    <fullName>Quintero 104</fullName>
                </value>
                <value>
                    <fullName>Quintero 105</fullName>
                </value>
                <value>
                    <fullName>Quintero 106</fullName>
                </value>
                <value>
                    <fullName>Quintero 107</fullName>
                </value>
                <value>
                    <fullName>Quintero 108</fullName>
                </value>
                <value>
                    <fullName>Quintero 109</fullName>
                </value>
                <value>
                    <fullName>Quintero 110</fullName>
                </value>
                <value>
                    <fullName>Quintero 111</fullName>
                </value>
                <value>
                    <fullName>Quintero 112</fullName>
                </value>
                <value>
                    <fullName>Quintero 113</fullName>
                </value>
                <value>
                    <fullName>Quintero 114</fullName>
                </value>
                <value>
                    <fullName>Quintero 115</fullName>
                </value>
                <value>
                    <fullName>Quintero 116</fullName>
                </value>
                <value>
                    <fullName>Quintero 201</fullName>
                </value>
                <value>
                    <fullName>Quintero 202</fullName>
                </value>
                <value>
                    <fullName>Quintero 203</fullName>
                </value>
                <value>
                    <fullName>Quintero 204</fullName>
                </value>
                <value>
                    <fullName>Quintero 205</fullName>
                </value>
                <value>
                    <fullName>Quintero 206</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>M3_Arrendados__c</fullName>
        <inlineHelpText>Indique los M3 arrendados</inlineHelpText>
        <label>M3 Arrendados</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Oportunidad__c</fullName>
        <label>Oportunidad</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Terminal, Centro de Beneficio y Estanque</relationshipLabel>
        <relationshipName>Terminal_Centro_de_Beneficio_y_Estanque</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Terminal__c</fullName>
        <label>Terminal</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Escuadrón</fullName>
                </value>
                <value>
                    <fullName>Mejillones</fullName>
                </value>
                <value>
                    <fullName>Quintero</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Terminal, Centro de Beneficio y Estanque</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>Todos</label>
    </listViews>
    <nameField>
        <displayFormat>{0000}</displayFormat>
        <label>Número</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Terminal, Centro de Beneficio y Estanque</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>